# rfcrew

./: .gitignore  LICENSE.txt  README.md  justfile  pyproject.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json
assets/: crewai_flow.html
config/: agents.yaml  tasks.yaml
samples/batch_ingestion_strategy/notes/: batch_ingestion_notes.md
samples/bq_write_api/notes/: bq_write_api_insufficient.md  bq_write_api_sufficient.md
samples/notes/: bq_write_api.md
samples/orchestrator/: actual.md
src/rfcrew/: __init__.py  cli.py  commands.py  crew.py  flows.py  utils.py
src/rfcrew/crews/: __init__.py  assessor.py  base.py  converter.py  evaluator.py  rfc.py
tests/cli/: test_cli_utils.py
tests/crews/: test_assessor.py
tests/integration/: test_score_agent.py
