[project]
name = "rfcrew"
version = "0.0.0"
description = "A crew of AI agents for creating Requests for Comments (RFCs)."
authors = [
  {name="Jasper Ginn", email="jasperginn@gmail.com"}
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "coolname>=2.2.0",
    "crewai[tools]>=0.118.0",
    "google-cloud-aiplatform>=1.38",
    "google-generativeai>=0.8.5",
    "litellm>=1.60.2",
    "openlit>=1.33.20",
    "pyyaml>=6.0.2",
    "setuptools>=80.1.0",
    "tenacity>=9.1.2",
    "typer>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.2",
]
package = true

[project.scripts]
rfcrew = "rfcrew.cli:entrypoint"

[tool.ruff]
lint.ignore = ["E501"]
extend-exclude = [
  "__pycache__",
  ".eggs",
  ".git",
  ".venv",
  "build",
  "dist",
  "notebooks",
  ".cache"
]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["src", "scripts"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
markers = [
  "integration: marks integration tests",
  "llm: marks tests that require LLM calls",
]
cache_dir = "/home/vscode/workspace/.cache/pytest"
